--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "@babel/core": "^7.8.7",
     "@babel/preset-env": "^7.8.7",
     "@babel/preset-react": "^7.8.3",
+    "assemble-react-bulma": "0.0.1",
     "babel-jest": "^24.9.0",
+    "css-loader": "^3.4.2",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "jest": "^24.9.0",
