--- a/package.json
+++ b/package.json
@@ -1,25 +1,32 @@
 {
-  "name": "my-app",
-  "version": "0.1.0",
-  "private": true,
+  "name": "assemble-react-bulma",
+  "description": "Set of React components created to assist in development using the Bulma framework",
+  "readmeFilename": "README.md",
+  "keywords": [
+    "Bulma",
+    "React",
+    "Components"
+  ],
+  "version": "0.0.6",
+  "author": {
+    "name": "Thiago Miklan Moreira"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.4.0",
-    "@testing-library/user-event": "^7.2.1",
-    "classname": "0.0.0",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
+    "babel-eslint": "^10.1.0",
     "classnames": "^2.2.6",
     "node-fetch": "^2.6.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-scripts": "3.4.0",
-    "use-state-with-callback": "^1.0.18"
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-scripts": "3.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "jest",
-    "eject": "react-scripts eject",
-    "debug": "node --nolazy --inspect-brk=9229 Elements.js"
+    "build": "rollup -c",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -37,15 +44,35 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "^7.8.7",
-    "@babel/preset-env": "^7.8.7",
-    "@babel/preset-react": "^7.8.3",
-    "assemble-react-bulma": "0.0.1",
-    "babel-jest": "^24.9.0",
-    "css-loader": "^3.4.2",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.2",
-    "jest": "^24.9.0",
-    "react-test-renderer": "^16.13.0"
-  }
+    "@babel/core": "^7.9.0",
+    "@babel/preset-env": "^7.9.0",
+    "@babel/preset-es2015": "^7.0.0-beta.53",
+    "@babel/preset-react": "^7.9.4",
+    "@babel/plugin-external-helpers": "^7.8.3",
+    "babel-loader": "^8.1.0",
+    "html-loader": "^1.1.0",
+    "webpack": "^4.42.1",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3",
+    "babel-plugin-external-helpers": "^6.22.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "rollup": "^2.3.2",
+    "rollup-plugin-babel": "^4.4.0",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-peer-deps-external": "^2.2.2",
+    "rollup-plugin-postcss": "^2.5.0",
+    "rollup-plugin-replace": "^2.2.0",
+    "rollup-plugin-url": "^3.0.1",
+    "simple-react-modal": "^0.5.1",
+    "styled-jsx": "^3.2.5",
+    "@svgr/rollup": "^5.3.0"
+  },
+  "peerDependencies": {
+    "react": ">= 16.x.x",
+    "styled-jsx": ">= 3.x.x"
+  },
+  "main": "dist/index.js",
+  "license": "MIT"
 }
