--- a/package.json
+++ b/package.json
@@ -24,8 +24,9 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "flow": "flow",
     "build": "rollup -c",
-    "test": "react-scripts test",
+    "test": "jest",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -45,18 +46,19 @@
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
+    "@babel/plugin-external-helpers": "^7.8.3",
     "@babel/preset-env": "^7.9.0",
     "@babel/preset-es2015": "^7.0.0-beta.53",
+    "@babel/preset-flow": "^7.9.0",
     "@babel/preset-react": "^7.9.4",
-    "@babel/plugin-external-helpers": "^7.8.3",
+    "@svgr/rollup": "^5.3.0",
     "babel-loader": "^8.1.0",
-    "html-loader": "^1.1.0",
-    "webpack": "^4.42.1",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3",
     "babel-plugin-external-helpers": "^6.22.0",
+    "flow-bin": "^0.122.0",
+    "html-loader": "^1.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-test-renderer": "^16.13.0",
     "rollup": "^2.3.2",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-commonjs": "^10.1.0",
@@ -67,7 +69,10 @@
     "rollup-plugin-url": "^3.0.1",
     "simple-react-modal": "^0.5.1",
     "styled-jsx": "^3.2.5",
-    "@svgr/rollup": "^5.3.0"
+    "jest": "^24.9.0",
+    "webpack": "^4.42.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3"
   },
   "peerDependencies": {
     "react": ">= 16.x.x",
