--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "babel-eslint": "^10.1.0",
+    "bulma": "^0.8.1",
     "classnames": "^2.2.6",
     "node-fetch": "^2.6.0",
     "react": "^16.13.1",
