--- a/package.json
+++ b/package.json
@@ -57,6 +57,8 @@
     "babel-plugin-external-helpers": "^6.22.0",
     "flow-bin": "^0.122.0",
     "html-loader": "^1.1.0",
+    "html-webpack-plugin": "^4.2.0",
+    "jest": "^24.9.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-test-renderer": "^16.13.0",
@@ -70,7 +72,6 @@
     "rollup-plugin-url": "^3.0.1",
     "simple-react-modal": "^0.5.1",
     "styled-jsx": "^3.2.5",
-    "jest": "^24.9.0",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
