--- a/package.json
+++ b/package.json
@@ -12,19 +12,14 @@
     "name": "Thiago Miklan Moreira"
   },
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "babel-eslint": "^10.1.0",
     "bulma": "^0.8.1",
     "classnames": "^2.2.6",
-    "node-fetch": "^2.6.0",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1",
     "react-scripts": "3.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
+    "dev": "webpack-dev-server --mode development --open",
     "flow": "flow",
     "build": "rollup -c",
     "test": "jest",
@@ -49,29 +44,21 @@
     "@babel/core": "^7.9.0",
     "@babel/plugin-external-helpers": "^7.8.3",
     "@babel/preset-env": "^7.9.0",
-    "@babel/preset-es2015": "^7.0.0-beta.53",
-    "@babel/preset-flow": "^7.9.0",
     "@babel/preset-react": "^7.9.4",
-    "@svgr/rollup": "^5.3.0",
+    "@svgr/rollup": "^5.3.1",
     "babel-loader": "^8.1.0",
-    "babel-plugin-external-helpers": "^6.22.0",
-    "flow-bin": "^0.122.0",
-    "html-loader": "^1.1.0",
     "html-webpack-plugin": "^4.2.0",
     "jest": "^24.9.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-test-renderer": "^16.13.0",
-    "rollup": "^2.3.2",
+    "rollup": "^2.6.1",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-peer-deps-external": "^2.2.2",
-    "rollup-plugin-postcss": "^2.5.0",
-    "rollup-plugin-replace": "^2.2.0",
+    "rollup-plugin-postcss": "^2.6.2",
     "rollup-plugin-url": "^3.0.1",
-    "simple-react-modal": "^0.5.1",
-    "styled-jsx": "^3.2.5",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
