--- a/package.json
+++ b/package.json
@@ -12,14 +12,16 @@
     "name": "Thiago Miklan Moreira"
   },
   "dependencies": {
-    "bulma": "^0.8.1",
+    "bulma": "^0.8.0",
     "classnames": "^2.2.6",
     "react": "^16.13.1",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "dev": "webpack-dev-server --mode development --open",
+    "build_flow": "babel src/ -d lib/",
     "flow": "flow",
     "build": "rollup -c",
     "test": "jest",
@@ -44,9 +46,11 @@
     "@babel/core": "^7.9.0",
     "@babel/plugin-external-helpers": "^7.8.3",
     "@babel/preset-env": "^7.9.0",
+    "@babel/preset-flow": "^7.9.0",
     "@babel/preset-react": "^7.9.4",
     "@svgr/rollup": "^5.3.1",
     "babel-loader": "^8.1.0",
+    "flow-bin": "^0.122.0",
     "html-webpack-plugin": "^4.2.0",
     "jest": "^24.9.0",
     "react": "^16.13.1",
