--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": {
     "name": "Thiago Miklan Moreira"
   },
+  "homepage": "https://github.com/ThiagoMiklan/ARB_DOC/wiki",
   "dependencies": {
     "bulma": "^0.8.0",
     "classnames": "^2.2.6",
