--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,8 +8,8 @@
             "type": "chrome",
             "request": "launch",
             "name": "Launch Chrome against localhost",
-            "url": "http://localhost:3002",
-            "webRoot": "${workspaceFolder}/src/testes_componentes/TesteTable.js"
+            "url": "http://localhost:3000",
+            "webRoot": "${workspaceFolder}/src/index.js"
         }
     ]
 }
