--- a/package.json
+++ b/package.json
@@ -14,17 +14,14 @@
   "homepage": "https://github.com/ThiagoMiklan/ARB_DOC/wiki",
   "dependencies": {
     "bulma": "^0.8.0",
-    "react": "^16.13.1",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1"
+    "react": "^16.13.1"
   },
   "scripts": {
     "start": "react-scripts start",
-    "dev": "webpack-dev-server --mode development --open",
-    "build_flow": "babel ./src -d ./lib",
-    "flow": "flow",
+    "prepack": "npm run prepack:babel && npm run prepack:flow",
+    "prepack:babel": "babel ./src -d ./lib",
+    "prepack:flow": "flow-copy-source ./src ./lib",
     "cmd": "babel",
-    "build": "rollup -c",
     "test": "jest",
     "eject": "react-scripts eject"
   },
@@ -51,24 +48,11 @@
     "@babel/preset-env": "^7.11.0",
     "@babel/preset-flow": "^7.9.0",
     "@babel/preset-react": "^7.9.4",
-    "@svgr/rollup": "^5.3.1",
     "flow-bin": "^0.122.0",
     "flow-copy-source": "^2.0.9",
-    "html-webpack-plugin": "^4.2.0",
     "jest": "^24.9.0",
-    "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-test-renderer": "^16.13.0",
-    "rollup": "^2.6.1",
-    "rollup-plugin-babel": "^4.4.0",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-peer-deps-external": "^2.2.2",
-    "rollup-plugin-postcss": "^2.6.2",
-    "rollup-plugin-url": "^3.0.1",
-    "webpack": "^4.42.0",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3"
+    "react-scripts": "3.4.1"
   },
   "peerDependencies": {
     "react": ">= 16.x.x",
