--- a/package.json
+++ b/package.json
@@ -17,10 +17,14 @@
     "react": "^16.13.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "webpack --watch",
+    "start:dev": "webpack-dev-server --open",
     "cmd": "babel",
     "test": "jest",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "build": "npm run build_babel && npm run build_flow",
+    "build_babel": "babel ./src -d ./lib",
+    "build_flow": "flow-copy-source ./src ./lib"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -41,15 +45,23 @@
     "@babel/cli": "^7.10.5",
     "@babel/core": "^7.11.1",
     "@babel/node": "^7.10.5",
-    "@babel/plugin-external-helpers": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.11.0",
     "@babel/preset-env": "^7.11.0",
     "@babel/preset-flow": "^7.9.0",
     "@babel/preset-react": "^7.9.4",
+    "babel-loader": "^8.1.0",
+    "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^4.2.1",
     "flow-bin": "^0.122.0",
     "flow-copy-source": "^2.0.9",
+    "html-webpack-plugin": "^4.3.0",
     "jest": "^24.9.0",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "style-loader": "^1.2.1",
+    "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0",
+    "webpack-merge": "^5.1.1"
   },
   "peerDependencies": {
     "react": ">= 16.x.x",
