--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "scripts": {
     "start": "webpack-dev-server --open",
     "postinstall": "node ./scripts/postInstall.js",
-    "cmd": "babel",
+    "cmd": "babel-node",
     "test": "jest ",
     "build": "npm run build_babel && npm run build_flow",
     "build_babel": "babel ./src -d ./lib",
